README updates from class demo

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
                 <form id="add-ingredient">
                     <label>
                         Ingredient
-                        <input type="text" name="ingredient" id="ingredient">
+                        <input type="text" name="ingredient" id="ingredient" />
+                    </label>
+                    <label>
+                        Amount
+                        <input type="text" name="amount" id="amount" />
                     </label>
                 </form>
+                <div class=""
             </div>
         </section>
     </main>
