Inital form event listener

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     <button id='remove-last'>Remove Last Ingredient</button>
                 </div>
             </div>
-            <div id="save-meal">
+            <div id="add-meal">
                 <label>
                     Meal name:
                     <input id="meal-name"/>
                 </label>
-                <button id="add-meal">Add Meal</button>
+                <button id="save-meal">Save Meal</button>
             </div>
             <div id="meals">
                 <ul id="saved-meals">
