HTML form, add eventlistener in app.js,and TDD renderIngredients function

--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
                         Amount
                         <input type="text" name="amount" id="amount" />
                     </label>
+                    <label>
+                        Unit of measure
+                        <input type="text" name="unit" id="unit" />
+                    </label>
                     <button id='add'>Add Ingredient</button>
                 </form>
                 <div id='ingredient-display'>
                     <ul id='ingredient-list'>
-                        
+                        <li>bananas - 100 g</li>
                     </ul>
                     <button id='remove-last'>Remove Last Ingredient</button>
                 </div>
