save meal event listener, TDD renderMeal function, and impure renderMeals function

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button id="save-meal">Save Meal</button>
             </div>
             <div id="meals">
-                <ul id="saved-meals">
+                <ul id="list-meals">
                     
                 </ul>
             </div>
